math-core/tests/snapshots/wiki_test__wiki025.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Im, \\imath, \\jmath, \\Bbbk, \\ell, \\mho, \\wp, \\Re, \\circledS, \\S, \\P, \\text\\AA"
---
<math>
    <mi>ℑ</mi>
    <mo>,</mo>
    <mi>ı</mi>
    <mo>,</mo>
    <mi>ȷ</mi>
    <mo>,</mo>
    <mi>𝕜</mi>
    <mo>,</mo>
    <mi>ℓ</mi>
    <mo>,</mo>
    <mi>℧</mi>
    <mo>,</mo>
    <mi>℘</mi>
    <mo>,</mo>
    <mi>ℜ</mi>
    <mo>,</mo>
    <mi>Ⓢ</mi>
    <mo>,</mo>
    <mi>§</mi>
    <mo>,</mo>
    <mi>¶</mi>
    <mo>,</mo>
    <mtext>Å</mtext>
</math>
