math-core/tests/snapshots/wiki_test__wiki027.snap
---
source: math-core/tests/wiki_test.rs
expression: "a \\bmod b"
---
<math>
    <mi>a</mi>
    <mrow>
        <mspace width="0.2222em"/>
        <mtext>mod</mtext>
        <mspace width="0.2222em"/>
    </mrow>
    <mi>b</mi>
</math>
