math-core/tests/snapshots/wiki_test__wiki031.snap
---
source: math-core/tests/wiki_test.rs
expression: "+, -, \\pm, \\mp, \\dotplus"
---
<math>
    <mo>+</mo>
    <mo>,</mo>
    <mo form="prefix">−</mo>
    <mo>,</mo>
    <mo form="prefix">±</mo>
    <mo>,</mo>
    <mo form="prefix">∓</mo>
    <mo>,</mo>
    <mo form="prefix">∔</mo>
</math>
