math-core/tests/snapshots/wiki_test__wiki033.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\cdot, * \\ast, \\star, \\circ, \\bullet"
---
<math>
    <mo>·</mo>
    <mo>,</mo>
    <mo>∗</mo>
    <mo>∗</mo>
    <mo>,</mo>
    <mo>⋆</mo>
    <mo>,</mo>
    <mo>∘</mo>
    <mo>,</mo>
    <mo>∙</mo>
</math>
