math-core/tests/snapshots/wiki_test__wiki034.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\boxplus, \\boxminus, \\boxtimes, \\boxdot"
---
<math>
    <mo>⊞</mo>
    <mo>,</mo>
    <mo>⊟</mo>
    <mo>,</mo>
    <mo>⊠</mo>
    <mo>,</mo>
    <mo>⊡</mo>
</math>
