math-core/tests/snapshots/wiki_test__wiki036.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\circleddash, \\circledcirc, \\circledast"
---
<math>
    <mo>⊝</mo>
    <mo>,</mo>
    <mo>⊚</mo>
    <mo>,</mo>
    <mo>⊛</mo>
</math>
