math-core/tests/snapshots/wiki_test__wiki037.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\bigoplus, \\bigotimes, \\bigodot"
---
<math>
    <mo lspace="0" rspace="0">⨁</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⨂</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⨀</mo>
</math>
