math-core/tests/snapshots/wiki_test__wiki038.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\{ \\}, \\text\\O \\empty \\emptyset, \\varnothing"
---
<math>
    <mo stretchy="false">{</mo>
    <mo stretchy="false">}</mo>
    <mo>,</mo>
    <mtext>Ø</mtext>
    <mpadded><mi>∅︀</mi></mpadded>
    <mpadded><mi>∅︀</mi></mpadded>
    <mo>,</mo>
    <mi>∅</mi>
</math>
